<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="tum_logo"
            android:src="@drawable/tum_logo" />

        <TextView
            android:id="@+id/app_name_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/license_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/license" />

        <TextView
            android:id="@+id/authors_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/authors" />

        <TextView
            android:id="@+id/info_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autoLink="email"
            android:text="@string/info_demo_txt" />

        <TextView
            android:id="@+id/chair_info_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/chair_info_txt" />
    </LinearLayout>

</ScrollView>