<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="13dp" >

    <LinearLayout
        android:id="@+id/llayout_welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/singleplayer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5sp"
            android:drawableLeft="@drawable/ic_menu_play_clip"
            android:text="@string/button_singleplayer"
            android:textColor="#ee777777"
            android:textSize="20sp" />

        <Button
            android:id="@+id/multiplayer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5sp"
            android:drawableLeft="@drawable/ic_menu_allfriends"
            android:text="@string/button_multiplayer"
            android:textColor="#ee777777"
            android:textSize="20sp" />

        <Button
            android:id="@+id/settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5sp"
            android:drawableLeft="@drawable/ic_menu_manage"
            android:text="@string/button_settings"
            android:textColor="#ee777777"
            android:textSize="20sp" />

        <Button
            android:id="@+id/help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5sp"
            android:drawableLeft="@drawable/ic_menu_help"
            android:text="@string/button_help"
            android:textColor="#ee777777"
            android:textSize="20sp" />

        <Button
            android:id="@+id/about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5sp"
            android:drawableLeft="@drawable/ic_menu_info_details"
            android:text="@string/button_about"
            android:textColor="#ee777777"
            android:textSize="20sp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5sp"
            android:drawableLeft="@drawable/ic_menu_close_clear_cancel"
            android:text="@string/button_exit"
            android:textColor="#ee777777"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>